--- a/MaterialSkinExample/Properties/Resources.resx
+++ b/MaterialSkinExample/Properties/Resources.resx
@@ -181,4 +181,10 @@
   <data name="keyboard_arrow_up_FILL1_wght400_GRAD0_opsz24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\keyboard_arrow_up_FILL1_wght400_GRAD0_opsz24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="star_FILL1_wght400_GRAD0_opsz48" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\star_FILL1_wght400_GRAD0_opsz48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="star_FILL1_wght400_GRAD0_opsz48_color" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\star_FILL1_wght400_GRAD0_opsz48_color.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
